<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    	
    <RelativeLayout 
    	android:id="@+id/main_activity"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin" >

    	<ImageView
       		android:id="@+id/main_logo"
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_alignParentTop="true"
        	android:paddingBottom="16dp"
        	android:contentDescription="@string/tpb"
        	android:src="@drawable/logo" />

    	<AutoCompleteTextView
        	android:id="@+id/main_search_editor"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/main_logo"
        	android:layout_toLeftOf="@+id/main_search_button"
        	android:ems="10"
        	android:maxLength="64"
        	android:padding="12dp"
        	android:singleLine="true"
        	android:imeOptions="actionSearch"
        	android:text="@string/search" />

    	<ImageButton
        	android:id="@+id/main_search_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignTop="@id/main_search_editor"
        	android:layout_alignBottom="@id/main_search_editor"
        	android:layout_alignParentRight="true"
        	android:contentDescription="@string/search"
        	android:src="@drawable/search" />

    	<Button
        	android:id="@+id/main_browse"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/main_search_editor"
        	android:layout_marginTop="12dp"
        	android:gravity="center"
        	android:text="@string/browse" />

    	<ImageView
        	android:id="@+id/main_status_icon"
        	android:layout_width="28dp"
        	android:layout_height="28dp"
        	android:layout_below="@id/main_browse"
        	android:layout_centerVertical="true"
        	android:layout_marginTop="8dp"
        	android:paddingTop="8dp"
        	android:paddingRight="8dp"
        	android:contentDescription="@string/proxy"
        	android:src="@drawable/neutral" />

    	<TextView
        	android:id="@+id/main_status_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/main_status_icon"
        	android:layout_below="@id/main_browse"
        	android:layout_centerVertical="true"
        	android:layout_marginTop="8dp"
        	android:paddingTop="8dp"
        	android:paddingBottom="8dp"
        	android:text="@string/connecting" />

    	<ImageView
    	    android:id="@+id/main_advert"
    	    android:layout_height="60dp"
    	    android:layout_width="match_parent"
    	    android:layout_alignParentBottom="true"
    	    android:layout_below="@id/main_browse"
    	    android:contentDescription="@string/pro"
    	    android:maxHeight="120dp"
    	    android:maxWidth="480dp"
    	    android:paddingTop="8dp"
    	    android:src="@drawable/advert" />
    	
    	<!-- <com.google.ads.AdView
			xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        	android:id="@+id/main_admob"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_alignParentLeft="true"
        	ads:adUnitId="ca-app-pub-7296622233197315/3074943589"
        	ads:adSize="BANNER"
        	ads:loadAdOnCreate="true" /> -->

		<ProgressBar
	    	android:id="@+id/main_loading"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_centerHorizontal="true"
	    	android:layout_centerVertical="true" />
		
	</RelativeLayout>

    <!-- <ProgressBar
	    android:id="@+id/main_drawer_loading"
        android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true" />
	</RelativeLayout> -->

    <ListView
		android:id="@+id/main_drawer_categories"
        android:layout_width="232dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/lighter" 
        android:divider="@color/light"
        android:dividerHeight="1dp"
        android:choiceMode="singleChoice" />
    
</android.support.v4.widget.DrawerLayout>